--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "allowJs": true,
     "target": "ES5",
-    "outDir": "./build",
+    "outDir": "./dist",
     "moduleResolution": "Node16",
-    "lib": ["ES2015", "DOM", "DOM.Iterable"]
+    "lib": ["ES2015", "DOM", "DOM.Iterable"],
+    "noImplicitAny": true
   },
   "include": ["./src/**/*"]
 }
