--- a/project/package.json
+++ b/project/package.json
@@ -20,5 +20,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@types/chart.js": "^2.9.37",
+    "axios": "^0.27.2",
+    "chart.js": "^3.9.1"
   }
 }
